--- a/minutes-bylaws.html
+++ b/minutes-bylaws.html
@@ -3,110 +3,68 @@ layout: inside
 category: minutes-bylaws
 title: Minutes &amp; Bylaws
 ---
-&nbsp;<p align="center">&nbsp;<p align="left">
-<font size="3" color="#336699"><b>Board Meeting Minutes Archive:</b></font></p>
-<p align="left">&nbsp;</p>
-<p align="left" style="margin-left: 20px">
-&nbsp;</p>
-<p align="left" style="margin-left: 20px">
-<b><font size="3">2010 Archive</font></b></p>
-<p align="left" style="margin-left: 20px">
-<b><font size="3">2008 - 2009 Archive</font></b></p>
-<p align="left" style="margin-left: 20px">
-&nbsp;</p>
-<p align="left" style="margin-left: 20px">
-&nbsp;</p>
-<p align="left" style="margin-left: 20px">
-<b><u>Past Monthly Minutes</u></b></p>
-<p align="left" style="margin-left: 20px">
-<a href="TCHOAMinutes.09.07.pdf">September 2007</a> <font face="Verdana">
-<a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
-<p align="left" style="margin-left: 20px">
-<a href="TCHOAMinutes.08.07.pdf">August 2007</a><font face="Verdana"><a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
-<p align="left" style="margin-left: 20px">
-<a href="TCHOAMInutes.07.07.pdf">July 2007</a> <font face="Verdana"><a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
-<p align="left" style="margin-left: 20px">
-<a href="TCHOAMinutes%2006.07.pdf">June 2007</a> <font face="Verdana"><a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
-<p align="left" style="margin-left: 20px">
-<a href="Microsoft%20Word%20-%20HOAMInutes.05.07.doc.pdf">May 2007</a> <font face="Verdana"><a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
-<p align="left" style="margin-left: 20px">
-<a href="Microsoft%20Word%20-%20HOAMInutes.04.07.doc.pdf">April 2007</a> <font face="Verdana"><a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
-<p align="left" style="margin-left: 20px">
-March 2007<font face="Verdana"><a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
-<p align="left" style="margin-left: 20px">
-<a href="February%202007%20minutes2.pdf">February 2007</a><font face="Verdana"><a href="TCHOA%20October%202006%20minutes.pdf"><img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
-<p align="left" style="margin-left: 20px">
-<a href="January%202007Meeting%20Minutes.pdf">January 2007 </a>
-<font face="Verdana">
-<a href="TCHOA%20October%202006%20minutes.pdf">
-<img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
-<p align="left" style="margin-left: 20px">
-<a href="Twin%20Creeks%20Homeowner%20Mtg%20Min%20dec%202006%20REV.pdf">November/December 2006</a>
-<a href="TCHOA%20October%202006%20minutes.pdf">
-<font face="Verdana">
-<img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></font></a></p>
-<p align="left" style="margin-left: 20px">
-<a href="TCHOA%20October%202006%20minutes.pdf">October 2006
-<font face="Verdana">
-<img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></font></a></p>
-<p align="left" style="margin-left: 20px">
-<a href="TCHOA%20September%202006%20minutes.pdf">September 2006</a>
-<a href="TCHOA%20August%202006%20minutes.pdf">
-<font face="Verdana">
-<img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></font></a></p>
-<p align="left" style="margin-left: 20px">
-<a href="TCHOA%20August%202006%20minutes.pdf">August 2006
-<font face="Verdana">
-<img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></font></a></p>
-<p align="left" style="margin-left: 20px">
-<a href="TCHA%20July%202006%20Minutes.pdf">July 2006 </a>
-<font face="Verdana">
-<a href="Twin_Creeks_Homeowner_Mtg_4-26-06.pdf">
-<img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
-<p align="left" style="margin-left: 20px">
-<a href="TCHA%20Minutes,%20June%2028%202006.pdf">June 2006 </a>
-<font face="Verdana">
-<a href="Twin_Creeks_Homeowner_Mtg_4-26-06.pdf">
-<img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
-<p align="left" style="margin-left: 20px">
-<a href="May%202006%20TCHOA%20Minutes.pdf">May 2006</a>
-<a href="Twin_Creeks_Homeowner_Mtg_4-26-06.pdf">
-<font face="Verdana">
-<img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></font></a></p>
-<p align="left" style="margin-left: 20px">
-<a href="Twin_Creeks_Homeowner_Mtg_4-26-06.pdf">April 2006
-<font face="Verdana">
-<img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></font></a></p>
-<p align="left" style="margin-left: 20px">
-<a href="Twin_Creeks_Homeowner_Mtg_Min_3-29-06.pdf">March 2006 </a><font face="Verdana">
-<a href="Twin_Creeks_Homeowner_Mtg_Min_2-15-06.pdf">
-<img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
-<p align="left" style="font-family: Arial; font-size: 10pt; margin-left: 20px; margin-right: 0; margin-bottom: 0">
-<a href="Twin_Creeks_Homeowner_Mtg_Min_2-15-06.pdf">February<font size="2"> 
-2006 </font></a><font face="Verdana">
-<a href="Twin_Creeks_Homeowner_Mtg_Min_2-15-06.pdf">
-<img border="0" src="file:///C:/Documents%20and%20Settings/Owner/My%20Documents/My%20Web%20Sites/Twin%20Creeks%20Website/pdficon_small.gif" width="19" height="19"></a></font></p>
-<p align="left" style="font-family: Arial; font-size: 10pt; margin-left: 20px; margin-right: 0; margin-bottom: 1px">
-<font face="Verdana">January 2006 </font></p>
-<p align="left" style="font-family: Arial; font-size: 10pt; margin-left: 20px; margin-right: 0; margin-bottom: 0px">
-<font size="2">
-December 
-2005 </font></p>
-<p align="left" style="font-family: Arial; font-size: 10pt; margin-left: 20px; margin-right: 0; margin-bottom: 0">
-<a href="Twin%20Creeks%20Homeowner%20Mtg%20Min%2011-30.pdf">
-<font size="2">
-November 
-2005 </font>
-<font face="Verdana">
-<img border="0" src="pdficon_small.gif" width="19" height="19"></font></a></p>
-<p align="left" style="margin-left: 20px; ">
-<font face="Verdana">
-<a href="Twin%20Creeks%20Homeowner%20Mtg%20Min%2010-26-05.pdf">October 
-2005 <img border="0" src="pdficon_small.gif" width="19" height="19"></a></font><p align="left" style="margin-left: 10px; margin-top: 8px">
-&nbsp;<p align="left" style="margin-left: 10px; margin-top: 8px">
-&nbsp;<p align="left" style="margin-left: 10px; margin-top: 8px">
-&nbsp;<p align="left" style="margin-left: 10px; margin-top: 8px">
-&nbsp;<p align="left">
-&nbsp;<p align="left">
-&nbsp;<p align="left">
-&nbsp;<p align="left">
+
+<h2>Board Meeting Minutes Archive</h2>
+
+<h3>2010</h3>
+<p>
+	<a href="HOAMinutes.6.09.10.pdf">June 2010</a>,
+	<a href="HOAMinutes.5.12.10.pdf">May 2010</a>,
+	<a href="HOAMinutes.3.24.10.pdf">March 2010</a>,
+	<a href="HOAMinutes.3.4%202010.pdf">February 2010</a>,
+	<a href="HOAMinutes.1.26%202010.pdf">January 2010</a>
+</p>
+
+<h3>2009</h3>
+<p>
+	<a href="HOAMinutes.12.16.2010.pdf">December 2009</a>,
+	<a href="HOAMinutes.10.26.09.pdf">October 2009</a>,
+	<a href="HOAMinutes.09.23.pdf">September 2009</a>,
+	<a href="HOAMinutes.08.26.09.pdf">August 2009</a>,
+	<a href="HOAMinutes.06.10.09.pdf">June 2009</a>,
+	<a href="HOAMinutes.05.27.09.pdf">May 2009</a>,
+	<a href="HOAMinutes.03.25.09.pdf">March 2009</a>,
+	<a href="HOAMinutes.02.25.09a.pdf">February 2009</a>,
+	<a href="HOAMinutes.02.04.09.pdf">January 2009</a>	
+</p>
+
+<h3>2007</h3>
+<p>
+	<a href="TCHOAMinutes.09.07.pdf">September 2007</a>,
+	<a href="TCHOAMinutes.08.07.pdf">August 2007</a>,
+	<a href="TCHOAMInutes.07.07.pdf">July 2007</a>,
+	<a href="TCHOAMinutes%2006.07.pdf">June 2007</a>,
+	<a href="Microsoft%20Word%20-%20HOAMInutes.05.07.doc.pdf">May 2007</a>,
+	<a href="Microsoft%20Word%20-%20HOAMInutes.04.07.doc.pdf">April 2007</a>,
+	<a href="February%202007%20minutes2.pdf">February 2007</a>,
+	<a href="January%202007Meeting%20Minutes.pdf">January 2007</a>
+</p>
+
+<h3>2006</h3>
+<p>
+	<a href="Twin%20Creeks%20Homeowner%20Mtg%20Min%20dec%202006%20REV.pdf">November/December 2006</a>,
+	<a href="TCHOA%20October%202006%20minutes.pdf">October 2006</a>,
+	<a href="TCHOA%20September%202006%20minutes.pdf">September 2006</a>,
+	<a href="TCHOA%20August%202006%20minutes.pdf">August 2006</a>,
+	<a href="TCHA%20July%202006%20Minutes.pdf">July 2006</a>,
+	<a href="TCHA%20Minutes,%20June%2028%202006.pdf">June 2006</a>,
+	<a href="May%202006%20TCHOA%20Minutes.pdf">May 2006</a>,
+	<a href="Twin_Creeks_Homeowner_Mtg_4-26-06.pdf">April 2006</a>,
+	<a href="Twin_Creeks_Homeowner_Mtg_Min_3-29-06.pdf">March 2006</a>,
+	<a href="Twin_Creeks_Homeowner_Mtg_Min_2-15-06.pdf">February 2006</a>
+</p>
+
+<h3>2005</h3>
+<p>
+	<a href="Twin%20Creeks%20Homeowner%20Mtg%20Min%2011-30.pdf">November 2005</a>,
+	<a href="Twin%20Creeks%20Homeowner%20Mtg%20Min%2010-26-05.pdf">October 2005</a>
+</p>
+
+<h3>Other documents</h3>
+<p>
+	<a href="2009%20Arch%20Form.pdf">New Architectural Form</a>,
+	<a href="IntroLetter.pdf">New Management</a>,
+	<a href="April%20Budget%202009.pdf">Apr 2009 Budget Added</a>,
+	<a href="July2009.pdf">July 2009 Financial Doc</a>
+</p>
+
