--- a/New Residents.htm
+++ b/New Residents.htm
@@ -404,7 +404,7 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("fp_derived/Twin Creeks faq.htm_cmp_ice17
 		Reader free at </font>
 		<font face="Arial, Helvetica, sans-serif" size="3">
 		<a href="http://www.adobe.com/products/acrobat/readstep.html">
-		<img height="31" src="getacro.gif" width="88" align="absMiddle" border="0"></a></font></p>
+		<img height="31" src="images/get-acrobat-reader.gif" width="88" align="absMiddle" border="0"></a></font></p>
 		<p>&nbsp;</p>
 		<table border="1" width="91%" bordercolordark="#999999" bordercolorlight="#999999">
 			<tr>
