--- a/Newsletters.htm
+++ b/Newsletters.htm
@@ -159,7 +159,7 @@ if(MSFPhover) { MSFPnav10n=MSFPpreload("fp_derived/Twin Creeks faq.htm_cmp_ice17
 		Reader FREE at </font>
 		<font face="Arial, Helvetica, sans-serif" size="3">
 		<a href="http://www.adobe.com/products/acrobat/readstep.html">
-		<img height="31" src="getacro.gif" width="88" align="middle" border="0" hspace="3"></a></font></p>
+		<img height="31" src="images/get-acrobat-reader.gif" width="88" align="middle" border="0" hspace="3"></a></font></p>
 		<p align="left" style="margin-right: 100px">
 		&nbsp;</td>
 		<td background="images/rightbg.gif">&nbsp;</td>
