--- a/newsletters.html
+++ b/newsletters.html
@@ -41,5 +41,5 @@ newsletters listed above are in PDF format and require Acrobat Reader to open. D
 Reader FREE at </font>
 <font face="Arial, Helvetica, sans-serif" size="3">
 <a href="http://www.adobe.com/products/acrobat/readstep.html">
-<img height="31" src="getacro.gif" width="88" align="middle" border="0" hspace="3"></a></font></p>
+<img height="31" src="images/get-acrobat-reader.gif" width="88" align="middle" border="0" hspace="3"></a></font></p>
 <p align="left" style="margin-right: 100px">
